# webink

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: deploy.yml
scripts/: build.sh  gen_icons.py  patch_crossink_emscripten.sh  patch_simulator.sh  serve.sh
wasm/: CMakeLists.txt
wasm/include_overrides/: MD5Builder.h  SimHttpFetch.h
wasm/include_overrides/freertos/: FreeRTOS.h  semphr.h  task.h
wasm/patches/: README.md
wasm/src/: webink_activity_stubs.cpp  webink_main.cpp  webink_network_stubs.cpp  webink_orientation.cpp
www/: app.js  index.html  manifest.json  sw.js
